sces-implements/sces-cmw/src-cwraps/inc/sces-os.h

#define SCES_OS_WAIT_NO      0
#define SCES_OS_WAIT_FOREVER UINT32_MAX
#define SCES_EVENT_NONE (0x00000000U)
#define SCES_EVENT_ALL  (0xFFFFFFFFU)
/// @brief Event handle type
/// @details Opaque handle representing an event object
typedef void* scesEventHandle_t;
/// @brief Message queue handle type
/// @details Opaque handle representing a message queue object
typedef void* scesMessageQueueHandle_t;
/// @brief Memory pool handle type
/// @details Opaque handle representing a memory pool object
typedef void* scesMemPoolHandle_t;
/// @brief Task handle type
/// @details Opaque handle representing a task control block
typedef void* scesTaskHandle_t;
/// @brief OS state enumeration
/// @details Represents the various states the OS can be in
typedef enum
{
    SCES_OS_STATE_RUNNING      = 0,
    SCES_OS_STATE_INITIALIZING = 1,
    SCES_OS_STATE_BLOCKED      = 2,
    SCES_OS_STATE_SUSPENDED    = 3,
    SCES_OS_STATE_LOCKED       = 4,
    SCES_OS_STATE_TERMINATED   = 5,
    SCES_OS_STATE_ERR_INIT_MEM = 6,
    SCES_OS_STATE_UNKNOWN_ERR  = UINT32_MAX
} scesOsState_t;
/// @brief Initialize the OS abstraction layer
/// @details This function initializes the OS abstraction layer by creating
///          the OS stack byte pool and setting the initial OS state.
/// @return SCES_RET_OK on success, error code otherwise
scesRetVal_t sces_os_initialize(void);
/// @brief Initialize the OS memory pool
/// @details This function initializes the OS memory pool used for dynamic
///          memory allocations within the OS abstraction layer.
/// @return SCES_RET_OK on success, error code otherwise
scesRetVal_t sces_os_initialize_mem_pool(void);
/// @brief Get the current OS state
/// @return Current OS state
scesOsState_t sces_os_state(void);
/// @brief Get the current system tick count
/// @return Current system tick count in milliseconds
uint32_t sces_os_tick_count(void);
/// @brief  Get the number of tasks currently in the system
/// @return Number of tasks in the system
uint32_t sces_os_task_count(void);
// /// @brief  Suspend the task scheduler
// /// @return Previous scheduler state to be used for resuming
// uint32_t sces_os_suspend_schedule(void);

// /// @brief  Resume the task scheduler
// /// @param previous_state Previous scheduler state returned by @ref sces_os_suspend_schedule
// void sces_os_resume_schedule(uint32_t previous_state);

/// @brief  Get the currently running task
/// @return Handle to the currently running task
scesTaskHandle_t sces_os_current_task(void);
/// @brief  Yield the processor from the current task
/// @details This function allows the current task to yield the processor, allowing other tasks to
/// run.
void sces_os_yield(void);
/// @brief  Delay the current task for a specified time
/// @details This function puts the current task into a blocked state for the specified number of
/// system ticks.
/// @param ticks Number of system ticks to delay
void sces_os_delay(uint32_t ticks);
/// @brief  Delay the current task until a specified time
/// @details This function delays the current task until the specified time increment has passed
/// since the previous wake time.
/// @param ticks     Time increment in system ticks
void sces_os_delay_interval(uint32_t ticks);
/// @brief  Exit the current task
/// @details This function terminates the execution of the current task.
void sces_os_exit_task(void);
/// @brief  Exit the current task created with static stack allocation
/// @details This function terminates the execution of the current task created with static stack
void sces_os_exit_task_static(void);
/// @brief  Allocate memory from the OS memory pool
/// @details This function allocates a block of memory of the specified size from the OS memory
///          pool.
///.         The os implementation will choice the best fit memory block from the pool.
/// @param size Size of memory want to allocate in bytes
/// @return Pointer to the allocated memory block, or NULL on failure
void* sces_os_malloc(uint32_t size);
/// @brief  Free memory back to the OS memory pool
/// @details This function frees a previously allocated block of memory back to the OS memory pool.
/// @param ptr Pointer to the memory block to free
/// @param size Size of the memory to free in bytes
void sces_os_free(void* ptr, uint32_t size);
/// @brief  Create a new event object
/// @details This function creates a new event object with the specified name.
/// @param name Name of the event object
/// @return Handle to the created event object or NULL on failure
scesEventHandle_t sces_event_create(const char* name);
/// @brief  Delete an event object
/// @details This function deletes the specified event object and frees its resources.
/// @param event Handle to the event object to be deleted
void sces_event_delete(scesEventHandle_t event);
/// @brief  Get the name of an event object
/// @details This function retrieves the name of the specified event object.
/// @param event Handle to the event object
/// @return Pointer to the event object's name string
const char* sces_event_name(scesEventHandle_t event);
/// @brief  Get the current state of an event object
/// @details This function retrieves the current state (flags) of the specified event object.
/// @param event Handle to the event object
/// @return Current state (flags) of the event object
uint32_t sces_event_state(scesEventHandle_t event);
/// @brief  Put event flags
/// @details This function puts the specified flags in the event object.
/// @param event Handle to the event object
/// @param flags Flags to be putted
/// @return SCES_RET_OK on success, error code otherwise
scesRetVal_t sces_event_put(scesEventHandle_t event, uint32_t flags);
/// @brief  Wait for event flags
/// @details This function waits for the specified flags to be set in the event object.
/// @param event        Handle to the event object
/// @param events_value Flags to wait for
/// @param timeout      Timeout in milliseconds to wait (0 for no wait, SCES_OS_WAIT_FOREVER for
/// infinite wait)
/// @return SCES_RET_OK on success, error code otherwise
scesRetVal_t sces_event_wait(scesEventHandle_t event, uint32_t events_value, uint32_t timeout);
/// @brief  Clear event flags
/// @details This function clears the specified flags in the event object.
/// @param events_value Handle to the event object
/// @param flags Flags to be cleared
void sces_event_clear(scesEventHandle_t event, uint32_t events_value);
/// @brief  Wait for event flags and clear them
/// @details This function waits for the specified flags to be set in the event object and clears
/// them upon wakeup.
/// @param event             Handle to the event object
/// @param events_value      Flags to wait for
/// @param out_events_value  Pointer to store the flags that caused the wakeup
/// @param timeout           Timeout in milliseconds to wait (0 for no wait, SCES_OS_WAIT_FOREVER
/// for infinite wait)
/// @return SCES_RET_OK on success, error code otherwise
scesRetVal_t sces_event_wait_and_clear(scesEventHandle_t event, uint32_t events_value,
                                       uint32_t* out_events_value, uint32_t timeout);
/// @brief  Create a new message queue
/// @details This function creates a new message queue with the specified parameters.
/// @param name          Name of the message queue
/// @param message_size  Size of each message in bytes
/// @param message_count Maximum number of messages the queue can hold
/// @return Handle to the created message queue or NULL on failure
scesMessageQueueHandle_t sces_mq_create(const char* name, uint32_t message_size,
                                        uint32_t message_count);
/// @brief  Create a new message queue with static buffer
/// @details This function creates a new message queue with the specified parameters,
///     using a statically allocated message buffer.
/// @param name           Name of the message queue
/// @param message_buffer Pointer to the statically allocated message buffer
/// @param message_size   Size of each message in bytes
/// @param message_count  Maximum number of messages the queue can hold
/// @return Handle to the created message queue
scesMessageQueueHandle_t sces_mq_create_static(const char* name, uint8_t* message_buffer,
                                               uint32_t message_size, uint32_t message_count);
/// @brief  Delete a message queue
/// @details This function deletes the specified message queue and frees its resources.
/// @param queue Handle to the message queue to be deleted
void sces_mq_delete(scesMessageQueueHandle_t queue);
/// @brief  Delete a message queue created with static buffer
/// @details This function deletes the specified message queue created with a static buffer.
/// @param queue Handle to the message queue to be deleted
void sces_mq_delete_static(scesMessageQueueHandle_t queue);
/// @brief  Get the name of a message queue
/// @param queue Handle to the message queue
/// @return Pointer to the message queue's name string
const char* sces_mq_name(scesMessageQueueHandle_t queue);
/// @brief  Get the size of a message in the queue
/// @param queue Handle to the message queue
/// @return Size of each message in bytes
uint32_t sces_mq_message_size(scesMessageQueueHandle_t queue);
/// @brief  Get the number of messages currently in the queue
/// @param queue Handle to the message queue
/// @return Number of messages currently in the queue
uint32_t sces_mq_message_count(scesMessageQueueHandle_t queue);
/// @brief  Get the maximum number of messages the queue can hold
/// @param queue Handle to the message queue
/// @return Maximum number of messages the queue can hold
uint32_t sces_mq_max_message_count(scesMessageQueueHandle_t queue);
/// @brief  Receive a message from the queue
/// @details This function receives a message from the specified message queue.
/// @param queue    Handle to the message queue
/// @param message  Pointer to the buffer to store the received message
/// @param timeout  Timeout in milliseconds to wait for a message (0 for no wait, UINT32_MAX for
/// infinite wait)
/// @return SCES_RET_OK on success, error code otherwise
scesRetVal_t sces_mq_send(scesMessageQueueHandle_t queue, const void* message, uint32_t timeout);
/// @brief  Receive a message from the queue
/// @details This function receives a message from the specified message queue.
/// @param queue    Handle to the message queue
/// @param message  Pointer to the buffer to store the received message
/// @param timeout  Timeout in milliseconds to wait for a message (0 for no wait,
/// SCES_OS_WAIT_FOREVER for infinite wait)
/// @return SCES_RET_OK on success, error code otherwise
scesRetVal_t sces_mq_receive(scesMessageQueueHandle_t queue, void* message, uint32_t timeout);
/// @brief  Clear all messages from the queue
/// @details This function clears all messages currently in the specified message queue.
/// @param queue Handle to the message queue
void sces_mq_clear(scesMessageQueueHandle_t queue);
/// @brief  Create a new memory pool
/// @details This function creates a new memory pool with the specified parameters.
/// @param name        Name of the memory pool
/// @param block_size  Size of each memory block in bytes
/// @param block_count Number of memory blocks in the pool
/// @return Handle to the created memory pool or NULL on failure
scesMemPoolHandle_t sces_mem_pool_create(const char* name, uint32_t block_size,
                                         uint32_t block_count);
/// @brief  Create a new memory pool with static buffer
/// @details This function creates a new memory pool with the specified parameters,
///     using a statically allocated pool buffer.
/// @param name        Name of the memory pool
/// @param pool_buffer Pointer to the statically allocated pool buffer
/// @param block_size  Size of each memory block in bytes
/// @param block_count Number of memory blocks in the pool
/// @return Handle to the created memory pool or NULL on failure
scesMemPoolHandle_t sces_mem_pool_create_static(const char* name, uint8_t* pool_buffer,
                                                uint32_t block_size, uint32_t block_count);
/// @brief  Delete a memory pool
/// @details This function deletes the specified memory pool and frees its resources.
/// @param pool Handle to the memory pool to be deleted
void sces_mem_pool_delete(scesMemPoolHandle_t pool);
/// @brief  Delete a memory pool created with static buffer
/// @details This function deletes the specified memory pool created with a static buffer.
/// @param pool Handle to the memory pool to be deleted
void sces_mem_pool_delete_static(scesMemPoolHandle_t pool);
/// @brief  Get the name of a memory pool
/// @param pool Handle to the memory pool
/// @return Pointer to the memory pool's name string
const char* sces_mem_pool_name(scesMemPoolHandle_t pool);
/// @brief  Get the size of each memory block in the pool
/// @param pool Handle to the memory pool
/// @return Size of each memory block in bytes
uint32_t sces_mem_pool_block_size(scesMemPoolHandle_t pool);
/// @brief  Get the number of used memory blocks in the pool
/// @param pool Handle to the memory pool
/// @return Number of memory blocks in the pool
uint32_t sces_mem_pool_block_count(scesMemPoolHandle_t pool);